@@ -5095,7 +5095,7 @@ void main()
     </tr>
     <tr>
       <th><code>uniform vec2 u_textureSize</code>
-      <td>The input texture's size. Includes the filter margins.
+      <td>The input texture's size. Includes the filter margins. The texture size is given in the actual device pixels and incorporates the device pixel ratio.
     </tr>
     <tr>
       <th><code>uniform vec4 u_meshBox</code>
