@@ -11,7 +11,7 @@
    rel=dcterms.rights>
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-03-12 name=dcterms.issued>
+  <meta content=2013-03-15 name=dcterms.issued>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -35,14 +35,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 12 March 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 15 March 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130312/-->
+     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130315/-->
 
     <dt>Latest version:
 
@@ -11896,7 +11896,9 @@ void main()
         <tr>
          <th><code>uniform vec2 u_textureSize</code>
 
-         <td>The input texture's size. Includes the filter margins.
+         <td>The input texture's size. Includes the filter margins. The
+          texture size is given in the actual device pixels and incorporates
+          the device pixel ratio.
 
         <tr>
          <th><code>uniform vec4 u_meshBox</code>
