@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-03-15  Dirk Schulze  <dschulze@adobe.com>
+- Underline that the texture uniform is in device pixel.
+
 2013-03-12  Dirk Schulze  <dschulze@adobe.com>
 - Add conformance section.
 
